tests/fixtures/multi_module/valid/diamond/d.furqan
bismillah D {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: core
    not_scope: nothing_excluded
}

fn placeholder() -> Integrity {
    return Integrity
}
