tests/fixtures/multi_module/invalid/type_not_in_dep/consumer.furqan
bismillah DataConsumer {
    authority: NAMING_MD
    serves: purpose_hierarchy.balance_for_living_systems
    scope: consume
    not_scope: nothing_excluded
}

tanzil consumer_deps {
    depends_on: DataProvider
}

fn process(input: MysteryType) -> Integrity {
    return Integrity
}
